--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="w-100">
                     <div id="food-show" class="food-show col-sm-8 col-md-6 col-lg-5">
-                        
+                        <!-- the clicked items will show up here -->
                     </div>
                 </div>
             </div>
