again feature added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <form id="search">
                         <div class="row">
                             <div class="col-md-12 d-flex">
-                                <input id="search-bar" type="text" class="w-75 form-control" autocomplete="off">
+                                <input id="search-bar" type="text" class="w-75 form-control" autocomplete="off" placeholder="Search your food">
                                 <button type="submit" class="w-25 btn btn-danger">Search</button>
                             </div>
                         </div>
